update submodule pointer

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/pythonlearner1025/pokerkit.git
 [submodule "OMPEval"]
 	path = OMPEval
-	url = https://github.com/zekyll/OMPEval.git
+	url = https://github.com/pythonlearner1025/OMPEval.git
