master -> bufix for pokerkit module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "pokerkit"]
 	path = pokerkit
 	url = https://github.com/pythonlearner1025/pokerkit.git
-	branch = master
+	branch = bugfix
 [submodule "OMPEval"]
 	path = OMPEval
 	url = https://github.com/pythonlearner1025/OMPEval.git
